<resources>
    <string name="app_name">바이낸스</string>
    <string name="logo">로고</string>

    <string name="future_title">%1$s%2$s</string>

    <string name="future_page1_title">Open Orders (%d)</string>
    <string name="future_page2_title">Positions (%d)</string>

    <string name="usds_m">USDⓈ-M</string>
    <string name="coin_m">COIN-M</string>
    <string name="option">Options</string>
    <string name="battle">Battle</string>

    <string name="buy">Buy</string>
    <string name="sell">Sell</string>

    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="unit_with_bracket">(%s)</string>
    <string name="unit">%s</string>
    <string name="type">%s</string>
    <string name="usable">Avbl</string>

    <string name="amount_with_unit">금액(%s)</string>

    <string name="home">Home</string>
    <string name="markets">Markets</string>
    <string name="trades">Trades</string>
    <string name="futures">Futures</string>
    <string name="wallets">Wallets</string>

    <string name="margin_mode_isolated">Isolated</string>
    <string name="margin_mode_cross">Cross</string>
    <string name="exclaim">!</string>
    <string name="perpetual">Perpetual</string>

    <string name="wallet_tab1_title">Overview</string>
    <string name="wallet_tab2_title">Spot</string>
    <string name="wallet_tab3_title">Funding</string>
    <string name="wallet_tab4_title">Margin</string>
    <string name="wallet_tab5_title">Futures</string>
    <string name="wallet_tab6_title">Earn</string>
    <string name="wallet_tab7_title">풀</string>
    <string name="wallet_tab8_title">기프트</string>

    <string name="wallet_future_tab1_title">@string/positions</string>
    <string name="wallet_future_tab2_title">@string/asset</string>
    <string name="wallet_future_tab3_title">@string/collaterals</string>

    <string name="positions">Positions</string>
    <string name="asset">Asset</string>
    <string name="collaterals">담보</string>

    <string name="deposit">입금</string>
    <string name="withdraw">출금</string>
    <string name="transfer">Transfer</string>
    <string name="portfolio">Portfolio</string>
    <string name="spot">Spot</string>
    <string name="cross_margin">Cross Margin</string>
    <string name="isolated_margin">Isolated Margin</string>
    <string name="usds_present">USDⓈ-M Futures</string>
    <string name="coin_present">COIN-M Futures</string>
    <string name="stock">주식</string>
    <string name="p2p">P2P</string>
    <string name="earn">Earn</string>
    <string name="pool">풀</string>
    <string name="t_option">T-Option</string>
    <string name="third_party_account">Third-party Account</string>
    <string name="pnl_analysis">PNL Analysis</string>
    <string name="borrow_repay">차용/상환</string>
    <string name="convert">Convert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallet_balance">Wallet Balance (%s)</string>
    <string name="margin_balance">Margin Balance (%s)</string>
    <string name="unrealized_pnl">Unrealized PNL (%s)</string>
    <string name="available_for_withdrawal">Avbl for Withdrawal (%s)</string>
    <string name="ltx">LTX</string>
    <string name="locked">잠김</string>

    <string name="filled">체결 (%s)</string>
    <string name="funding">Funding</string>
    <string name="defi_wallet">DeFi Wallet</string>
</resources>
