<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/future_top_tab"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/background_top_tab"
    android:orientation="horizontal"
    android:padding="1.5dp"
    android:weightSum="100">

    <!--<item name="android:textStyle">bold</item>
    <item name="android:textSize">15sp</item>
    <item name="android:textColor">@color/text_normal</item>
        -->
    <TextView
        android:textSize="14sp"
        android:layout_margin="1.5dp"
        android:layout_width="0dp"
        android:fontFamily="@font/plex_medium"
        android:layout_height="match_parent"
        android:layout_weight="27"
        android:background="@drawable/background_top_tab_clicked"
        android:gravity="center"
        android:text="@string/usds_m"
        android:textColor="@color/white" />

    <TextView
        android:textSize="14sp"
        android:layout_margin="1.5dp"
        android:layout_width="0dp"
        android:fontFamily="@font/plex_medium"
        android:layout_height="match_parent"
        android:layout_weight="27"
        android:gravity="center"
        android:textColor="#848e9c"
        android:text="@string/coin_m" />

    <TextView
        android:textSize="14sp"
        android:fontFamily="@font/plex_medium"
        android:layout_margin="1.5dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="22"
        android:gravity="center"
        android:textColor="#848e9c"
        android:text="@string/option" />

    <TextView
        android:textSize="14sp"
        android:fontFamily="@font/plex_medium"
        android:layout_margin="1.5dp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="25"
        android:gravity="center"
        android:textColor="#848e9c"
        android:text="@string/battle" />
</LinearLayout>